<resources>
    <!--textos iniciales, autor:profe-->
    <string name="app_name">SpyroTheDragon</string>
    <string name="worlds">Mundos</string>
    <string name="characters">Personajes</string>
    <string name="collectibles">Coleccionables</string>
    <string name="title_about">Acerca de</string>
    <string name="text_about">Aplicación desarrollada por \n <b>Lindsay Barrero Martínez.</b></string>
    <string name="accept">Aceptar</string>


    <!--pantalla bienvenida-->
    <string name="title_bienvenida">BIENVENIDO</string>
    <string name="frase_comienzo">Estás a punto de entrar en el apasionante mundo de <b>&quot;Spyro the Dragon&quot;</b></string>
    <string name="pregunta_entrar">¿Preparado para entrar?</string>
    <string name="comenzar_guia">Comenzar</string>

    <!--de la guia personjes-->
    <string name="salir_de_la_guia">Salir de la guia</string>
    <string name="personajes_de_spyro"><b>Personajes:</b> Aquí podrás explorar todos los personajes del mundo de Spyro.</string>
    <string name="texto_info_comienzo">Pulsa <b>comenzar</b> para ser tu guia en el mundo de Spyro</string>
    <string name="ir_a_mundos">Ir a pantalla Mundos</string>

    <!--de la guia mundos-->
    <string name="mundos_de_spyro"><b>Mundos:</b> Encontrarás los mundos de Spyro.
        \n Entre otros: Playa Soleada, Jardines del Mediodía, Destello....</string>
    <string name="ir_a_coleccionables">Ir a Colecccionables</string>


    <!--de la guia resumen-->
    <string name="ir_a_resumen">Ir a pantalla resumen</string>
    <string name="coleccionables_espyro">Pantalla donde tendrás todos los <b>Coleccionables</b> capturados.
        Como gemas,huevos de dragón, puntos de habilidad, cajas de espirtu y libélulas.</string>

    <!--del resumen final-->
    <string name="resumen_final">Resumen final</string>
    <string name="text_row_resumen">Elementos que has visto en la guia</string>
    <string name="row1_resumen">1.- Personajes en el mundo de Spyro</string>
    <string name="row2_resumen">2.- Mundos de Spyro</string>
    <string name="row3_resumen">3.- Coleccionables</string>
    <string name="info_desarrolllador">4.- Información del desarrollador</string>


    <!--del icono de información-->
    <string name="info_desarrollador"><b>Información</b> del desarrollador</string>
    <string name="siguiente"><![CDATA[Siguiente >>]]></string>


</resources>