<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guideResumenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bashemath"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/text_row_resumen"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_resumenFinal" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.026">


        <CheckBox
            android:id="@+id/chkPersonajes"
            android:layout_row="0"
            android:layout_column="0"
            android:fontFamily="@font/bashemath"
            android:text="@string/row1_resumen"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chkMundos"
            android:layout_row="1"
            android:layout_column="0"
            android:fontFamily="@font/bashemath"
            android:text="@string/row2_resumen"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/chkColecciones"
            android:layout_row="2"
            android:layout_column="0"
            android:fontFamily="@font/bashemath"
            android:text="@string/row3_resumen"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </GridLayout>

    <TextView
        android:id="@+id/title_resumenFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/drip"
        android:gravity="center_horizontal"
        android:padding="5sp"
        android:text="@string/resumen_final"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="172dp"
        android:layout_height="131dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/dragonflies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="234dp"
        android:layout_height="52dp"
        android:layout_margin="42dp"
        android:fontFamily="@font/bashemath"
        android:gravity="center"
        android:text="Comenzar juego"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.108" />


</androidx.constraintlayout.widget.ConstraintLayout>